--- a/competence.html
+++ b/competence.html
@@ -10,6 +10,8 @@
     <h1>Competence</h1>
 
     <div class="troixieme">
+        
+        <H2>TITRE</H2>
         <img src="img/">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita dolorum error quia harum porro amet consequatur impedit minima sed illum ipsum mollitia laborum, ex eius sequi pariatur quaerat veniam obcaecati!</p>
         
