--- a/text.html
+++ b/text.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="mon.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +11,17 @@
     <title>Document</title>
 </head>
 <body>
+
     <header>
-<p>logo</p>
-<a link href="experience.html">Experience</a>
-    <a link href="competence.html">Competence</a>
+         <div class="logoo">
+            <p>logo</p>
+        </div>
+
+<div class="lien">
+    <a link href="experience.html"><button>Experience</button></a>
+    <a link href="competence.html"><button>Competence</button></a>
+</div> 
+
     </header>
 
     <h1>Titre principal</h1>
@@ -20,9 +29,18 @@
 
 <div class="premier">
     <h2>Présentation</h2>
-    <img src="img/">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto error fugit nostrum ducimus laborum, quisquam corrupti laboriosam dolor saepe incidunt hic atque nobis, maxime, eaque deserunt numquam voluptas accusantium.</p>
-</div>
+    <img src="img/image1.png">
+    <div class="texte1">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto error fugit nostrum ducimus laborum, quisquam corrupti laboriosam dolor saepe incidunt hic atque nobis, maxime, eaque deserunt numquam voluptas accusantium.</p>
+
+    </div>
+    </div> 
+
+<footer>
+    
+    &copy
+
+</footer>
 
 </body>
 </html>
