--- a/text.html
+++ b/text.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="mon.js" defer></script>
@@ -10,37 +11,36 @@
 
     <title>Document</title>
 </head>
+
 <body>
+    <!-- menu burger  -->
 
-    <header>
-         <div class="logoo">
-            <p>logo</p>
-        </div>
+    <nav class="navbar dark-mode" role="navigation">
+        <div class="navbar__logo">Logo</div>
+        <ul class="navbar__links">
+            <li class="navbar__link first"><a href="text.html">Accueil</a></li>
+            <li class="navbar__link second"><a href="#">Presentation</a></li>
+            <li class="navbar__link third"><a href="experience.html">Experience</a></li>
+            <li class="navbar__link four"><a href="competence.html">Competence</a></li>
+            <li class="navbar__link fifth"><a href="#">Contact</a></li>
+        </ul>
+        <button class="burger">
+            <span class="bar"></span>
+        </button>
+    </nav>
+    <main class="main-content">
+    </main>
 
-<div class="lien">
-    <a link href="experience.html"><button>Experience</button></a>
-    <a link href="competence.html"><button>Competence</button></a>
-</div> 
+    <img src="img/welcome-banner-spectrum-brush-strokes-260nw-1153070903.png" style="width: 300px">
 
-    </header>
+    <div class="presentation">
 
-    <h1>Titre principal</h1>
-    
-
-<div class="premier">
-    <h2>Présentation</h2>
-    <img src="img/image1.png">
-    <div class="texte1">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto error fugit nostrum ducimus laborum, quisquam corrupti laboriosam dolor saepe incidunt hic atque nobis, maxime, eaque deserunt numquam voluptas accusantium.</p>
-
+        <di class="ligne"></di>
     </div>
-    </div> 
 
-<footer>
-    
-    &copy
-
-</footer>
+    <footer>
+        &copy</footer>
 
 </body>
+
 </html>
