--- a/experience.html
+++ b/experience.html
@@ -12,6 +12,7 @@
 
     <div class="deuxieme">
         <img src="img/">
+        <div clas></div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita dolorum error quia harum porro amet consequatur impedit minima sed illum ipsum mollitia laborum, ex eius sequi pariatur quaerat veniam obcaecati!</p>
         
     </div>
