--- a/text.html
+++ b/text.html
@@ -3,6 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet"> 
     <script src="mon.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -20,7 +23,7 @@
             <div class="overlay-content">
                 <a href="text.html">Presentation</a>
                 <a href="experience.html">Experience</a>
-                <a href="competence.html">Conpetence</a>
+                <a href="competence.html">Competence</a>
                 <a href="#">Contact</a>
             </div>
         </div>
@@ -33,15 +36,22 @@
 
     <div class="presentation">
         <img src="img/image1.png" class="imgphoto">
+        
         <div class="deuxieme">
-            <h2>presentation</h2>
+             <h2>presentation</h2>
+             <div class="ligne1"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, ipsam officiis sequi quas assumenda,
                 sunt quibusdam nobis deserunt dolorum laudantium, commodi blanditiis. Soluta libero mollitia, commodi
-                corporis et debitis ipsum.</p>
+                corporis et debitis ipsum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum enim totam aliquid nostrum culpa suscipit fugiat placeat ut quis quia, fuga itaque officiis mollitia ipsam corporis minus assumenda incidunt temporibus.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ad obcaecati mollitia, laudantium saepe eum, temporibus amet quod adipisci nulla voluptatum aspernatur omnis dolorum sit consequuntur totam vel iure commodi.</p> 
 
         </div>
-        <div class="ligne1"></div>
+      
     </div>
+
+
+
 
     <footer>&copy</footer>
 
