--- a/text.html
+++ b/text.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script src="mon.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -27,29 +32,53 @@
                 <a href="#">Contact</a>
             </div>
         </div>
-        <span onclick="openNav()">menu</span>
+        <span onclick="openNav()" class="menu">menu</span>
+
+        <div class="lien">
+            <span>logo</span>
+            <a href="text.html">Presentation</a>
+            <a href="experience.html">Experience</a>
+            <a href="competence.html">Competence</a>
+            <a href="#">Contact</a>
+        </div>
+
     </header>
 
     <!--fin menu burger-->
 
-    <img src="img/welcome-banner-spectrum-brush-strokes-260nw-1153070903.png" class="bienvenueimg">
+    <!-- <img src="img/welcome-banner-spectrum-brush-strokes-260nw-1153070903.png" class="bienvenueimg"> -->
 
     <div class="presentation">
         <img src="img/image1.png" class="imgphoto">
-        
+
         <div class="deuxieme">
-             <h2>presentation</h2>
-             <div class="ligne1"></div>
+            <h2>presentation</h2>
+            <div class="ligne1"></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, ipsam officiis sequi quas assumenda,
                 sunt quibusdam nobis deserunt dolorum laudantium, commodi blanditiis. Soluta libero mollitia, commodi
                 corporis et debitis ipsum.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum enim totam aliquid nostrum culpa suscipit fugiat placeat ut quis quia, fuga itaque officiis mollitia ipsam corporis minus assumenda incidunt temporibus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ad obcaecati mollitia, laudantium saepe eum, temporibus amet quod adipisci nulla voluptatum aspernatur omnis dolorum sit consequuntur totam vel iure commodi.</p> 
+                </p>
 
         </div>
-      
+
     </div>
 
+<div class="troixieme">
+    <h2></h2>
+</div>
+
+<div class="lien-reseau">
+    <h2>lien reseau</h2>
+    <div class="reseau">
+        <a href="https://www.youtube.com/watch?v=t8LAXxqfqWk"><img src="img/lien-git2.png" alt="github" style="height: 80px;"></a>
+        <a href=""><img src="" alt="lien"></a>
+        <a href=""><img src="" alt="lien"></a>
+    </div>
+</div>
+
+<div class="monCV">
+
+</div>
 
 
 
